# Cliipy

./: .pre-commit-config.yaml  LICENSE  README.md  README.rst  setup.cfg  setup.py  sonar-project.properties  tox.ini
.circleci/: config.yml  sonar-project.properties
.github/workflows/: build.yml  greetings.yaml  python-publish.yml
docs/: Makefile  conf.py  index.rst  licence.rst
src/Cliipy/: cli.py
